Changelog
=========

2.0 (unreleased)
----------------

- Remove support for Archetypes
  [enfold-josh]

- Support Python 3 and Plone 5.2
  [enfold-josh,frapell]

- Catch exception raised when inserting post_traverse hook during a
  non-publishing traversal.
  [enfold-josh]

- Fix tests.
  [enfold-josh]

- Change functional test files extensions to .robot
  [enfold-josh]


1.0-dev (unreleased)
--------------------

- Add support for Archetypes [frapell]

- Make Dexterity an optional dependency [frapell]

- Include behavior to prevent removing items from a folderish [frapell]

- Include behavior to prevent renaming items in a folderish (only through UI). [frapell]

- Include behavior to allow setting a password for viewing a folder [frapell]

- Package created using templer
  [frapell]