@@ -1,50 +1,0 @@
-[buildout]
-extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
-
-package-name = collective_folderprotection
-package-extras = [test,dexterity]
-versions = versions
-
-eggs =
-    Pillow
-    collective_folderprotection[dexterity]
-
-test-eggs = Pillow
-
-parts += 
-    instance1
-    omelette
-    robot
-
-[instance1]
-<= instance
-eggs = 
-    ${buildout:eggs}
-    zope.globalrequest
-zcml = 
-
-[instance]
-eggs += iw.debug
-zcml += iw.debug
-
-[versions]
-plone.app.testing = 4.2.2
-docutils = 0.8.1
-robotframework = 2.8.1
-
-[test]
-defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
-
-[robot]
-recipe = zc.recipe.egg
-eggs =
-    Pillow
-    ${test:eggs}
-    plone.app.robotframework[ride,reload]
-
-[versions]
